--- a/.config/bashtop/bashtop.cfg
+++ b/.config/bashtop/bashtop.cfg
@@ -2,14 +2,14 @@
 
 #* Color theme, looks for a .theme file in "$HOME/.config/bashtop/themes" and "$HOME/.config/bashtop/user_themes"
 #* Should be prefixed with either "themes/" or "user_themes/" depending on location, "Default" for builtin default theme
-color_theme="Default"
+color_theme="themes/monokai"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs
 update_ms="2500"
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive"
 #* "cpu lazy" updates sorting over time, "cpu responsive" updates sorting directly
-proc_sorting="user"
+proc_sorting="cpu lazy"
 
 #* Reverse sorting order, "true" or "false"
 proc_reversed="false"
