--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -53,3 +53,4 @@ highlight article "\\[embedded flash: [0-9][0-9]*\\]" green default bold
 highlight article ":.*\\(link\\)$" cyan default
 highlight article ":.*\\(image\\)$" blue default
 highlight article ":.*\\(embedded flash\\)$" magenta default
+# color background black white
